--- a/styles.css
+++ b/styles.css
@@ -1031,14 +1031,16 @@ main {
 /* Left Avatar (First Child) */
 .section-header .avatar-header:first-child {
     right: 100%;
-    margin-right: 1rem;
+    margin-right: -1.5rem;
+    /* Pull closer to text */
     transform: translateY(-50%) rotate(5deg);
 }
 
 /* Right Avatar (Last Child) */
 .section-header .avatar-header:last-child {
     left: 100%;
-    margin-left: 1rem;
+    margin-left: -1.5rem;
+    /* Pull closer to text */
     transform: translateY(-50%) rotate(-5deg);
 }
 
