--- a/styles.css
+++ b/styles.css
@@ -516,6 +516,8 @@ main {
     margin-bottom: 2rem;
     position: relative;
     z-index: 10;
+    text-align: center;
+    /* Ensure avatar is centered */
 }
 
 .avatar {
